# vkr

./: .clang-format  CMakeLists.txt
demo/: CMakeLists.txt  error.hpp  filetools.hpp  main.cpp  measures.hpp  renderer.hpp  state.hpp  utils.hpp  widgets.hpp
demo/contollers/: evaluation.hpp  file_loading.hpp
demo/controllers/: evaluation.hpp  file_loading.hpp  test_datasets.hpp  test_datasets_naive.hpp  test_k.hpp  test_knn.hpp  test_memory.hpp  test_memory_datasets.hpp  test_n.hpp  test_n_naive.hpp
demo/views/: building_rtree.hpp  demo.hpp  demo_setup.hpp  evaluation.hpp  file_reading.hpp  main_menu.hpp  test.hpp  test_datasets.hpp  test_datasets_naive.hpp  test_k.hpp  test_knn.hpp  test_memory.hpp  test_memory_datasets.hpp  test_n.hpp  test_n_naive.hpp  test_results.hpp
src/: CMakeLists.txt  rtree.cpp  rtree.h
tests/: CMakeLists.txt  test_memory_size.cpp  test_rectangle.cpp  test_rtree.cpp  test_rtree_bulkload.cpp  test_rtree_knn.cpp
